# ai-student-maxim

./: .gitignore  LICENSE  README.md
homeworks/: S10-brief.md  S11-brief.md  S11-homework.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb  app.py  requirements.txt
homeworks/HW03/eda-cli/: pyproject.toml  test_data.csv
homeworks/HW03/eda-cli/hw03_report/: report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  core.py  viz.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: README.md
homeworks/HW04/eda-cli/src/eda_cli/: api.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.csv  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW07/artifacts/labels/: agg_labels.npy  dbscan_labels.npy  kmeans_labels.npy
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv  runs_classification.csv  runs_segmentation.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv
homeworks/HW14/: HW14.ipynb  report.md
homeworks/HW14/artifacts/: rag_examples.csv  retrieval_before_after_update.csv  retrieval_eval.csv
