[project]
name = "eda-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mavirys", email = "113904891+maxim007mv@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pytest>=9.0.2",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
